--- a/HomeApplication/HomeApplication/Pages/DeviceListPage.xaml
+++ b/HomeApplication/HomeApplication/Pages/DeviceListPage.xaml
@@ -27,10 +27,12 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Grid ColumnDefinitions="Auto" RowDefinitions="45" Margin="10, 15" >
-            <Button Text="Новое устройство" Clicked="DeviceButton_Clicked" Grid.Column="0" HorizontalOptions="FillAndExpand"></Button>
-            <Button Text="Изменить" Clicked="EditDeviceButton_Clicked" Grid.Column="1" HorizontalOptions="FillAndExpand"></Button>
-            <Button Text="Выход" Clicked="LogoutButton_Clicked" Grid.Column="2" HorizontalOptions="FillAndExpand"></Button>
+        <Grid ColumnDefinitions="Auto" RowDefinitions="45" Margin="5, 10" >
+            <Button Text="Profile" Clicked="UserProfileButton_Clicked"  Grid.Column="0" HorizontalOptions="FillAndExpand"></Button>
+            <Button Text="New" Clicked="NewDeviceButton_Clicked" Grid.Column="1" HorizontalOptions="FillAndExpand"></Button>
+            <Button Text="✏️" Clicked="EditDeviceButton_Clicked" Grid.Column="2" HorizontalOptions="FillAndExpand"></Button>
+            <Button Text="" Clicked="DeleteButton_Clicked"  Grid.Column="3" HorizontalOptions="FillAndExpand"></Button>
+            <Button Text="Exit" Clicked="LogoutButton_Clicked" Grid.Column="4" HorizontalOptions="FillAndExpand"></Button>
         </Grid>
     </StackLayout>
 </ContentPage>
